--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/layouts/search-gallery.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/layouts/search-gallery.xhtml
@@ -263,7 +263,7 @@
 					
 				</ul>
 				
-				<div style="padding: 10px; position: relative; text-align: center;">
+				<div style="padding: 10px; position: relative; text-align: center; clear: both;">
 					<ul class="searchScroller">
 						<li>1</li>
 						<li>2</li>
