--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-admin.css
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-admin.css
@@ -48,12 +48,12 @@ ol, ul {
 	margin-right: 10px;
 }
 
+/** LOGIN FORM **/
 #loginBox {
 	width: 400px;
 	margin: auto;
 	margin-top: 100px;
 }
-
 #loginBoxHeader {
 	padding: 0.5em;;
 	border: 1px solid #CCC;
@@ -65,7 +65,6 @@ ol, ul {
 	
 	background: #6B99B4;
 }
-
 #loginForm {
 	padding: 2em;
 	border: 1px solid #CCC;
@@ -75,7 +74,6 @@ ol, ul {
 	
 	background-color: #E9F1F4;
 }
-
 .loginInputForm {
 	width: 23em;
 	padding: 5px;
@@ -83,6 +81,57 @@ ol, ul {
 	margin: .2em 0 1em 0;
 	font-size: 110%;
 }
+/** LOGIN FORM **/
+
+/** MAIN FORM **/
+.mainFormBox {
+	width: auto;
+	margin: 35px 15px 0 15px;
+}
+.mainFormHeader {
+	padding: 0.5em;;
+	border: 1px solid #CCC;
+	border-radius: 5px 5px 0 0;
+	border-bottom: 0;
+	
+	background: #6B99B4;
+	font-size: 15px;
+	font-weight: bold;
+	color: #FFF;
+}
+.mainForm {
+	border-left: 1px solid #CCC;
+	border-right: 1px solid #CCC;
+	padding: 10px 25px;
+	background-color: #E9F1F4;
+}
+.mainFormBoxButtons {
+	border: 1px solid #CCC;
+	padding: 5px 20px;
+	border-radius: 0 0 5px 5px;
+}
+.inputMainForm {
+	padding: 5px;
+	border: 1px solid #D8DEE2;
+	font-size: 110%;
+}
+.bigInputMainForm {
+	width: 600px;
+}
+.mediumInputMainForm {
+	width: 300px;
+}
+.columnLabel {
+	text-align: right;
+	width: 100px;
+}
+.columnInput {
+	padding-left: 15px;
+}
+.buttonMainForm {
+	margin-right: 15px;
+}
+/** MAIN FORM **/
 
 /** CUSTOM_BUTTON **/
 .customButton {
@@ -103,7 +152,7 @@ ol, ul {
 /** CUSTOM_BUTTON **/
 
 #menuTop {
-	padding-top: 17px;
+	padding: 15px 0;
 	border-bottom:  1px solid #CCC;
 	margin: 15px 0 20px 0;
 }
