--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles.css
@@ -15,9 +15,14 @@ fieldset {
 	padding: 0;
 }
 
-ul, ol {
+ol, ul {
 	margin: 0;
 	padding: 0;
+	border: 0;
+}
+
+ol, ul {
+	list-style: none;
 }
 
 img {
@@ -27,14 +32,15 @@ img {
 
 a {
 	color: #0637B3;
-	text-decoration: none;
+	text-decoration: underline;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
 	margin: 0;
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
+	color: #CC6600;
 }
 
 p {
@@ -58,38 +64,48 @@ input {
 	font-weight: normal;
 }
 
+/** CUSTOM BUTTON **/
+.buttonMainForm {
+	margin-right: 15px;
+}
 .customButton {
+	margin-left: 10px;
 	border-radius: 3px;
 	font-size: 12px;
 	font-weight: bold;
-	padding: 10px;
+	padding: 7px 10px;
 	background-color: #2C3176;
 	border: 1px solid #2C3176;
 	color: white;
 	cursor: pointer;
-	background-image: -webkit-linear-gradient(top,#BACDFF,#4055A5 3%,#283077);
-	background-image: linear-gradient(top,#BACDFF,#4055A5 3%,#283077);
+	
+	background-color: #3C657C;
+	border: 1px solid #aaa;
+/* 	background-image: -webkit-linear-gradient(top,#BACDFF,#4055A5 3%,#283077); */
+/* 	background-image: linear-gradient(top,#BACDFF,#4055A5 3%,#283077); */
 }
-
 .customButton:hover {
-	background-image: -webkit-linear-gradient(top,#BACDFF,#4055A5 3%,#001AFF);
-	background-image: linear-gradient(top,#BACDFF,#4055A5 3%,#001AFF);
+	border: 1px solid #62658B;
+	background-color: #6B99B4;
+/* 	background-image: -webkit-linear-gradient(top,#BACDFF,#4055A5 3%,#001AFF); */
+/* 	background-image: linear-gradient(top,#BACDFF,#4055A5 3%,#001AFF); */
 }
-
-/* .customButton { */
-/* 	border-radius: 3px; */
-/* 	font-size: 14px; */
-/* 	padding: 10px; */
-/* 	border: 1px solid #62658B; */
-/* 	color: white; */
-/* 	cursor: pointer; */
-/* 	font-weight: bold; */
-/* 	background-color: #6B99B4; */
-/* } */
-/* .customButton:hover { */
-/* 	background-color: #3C657C; */
-/* 	border: 1px solid #aaa; */
-/* } */
+.customButton2 {
+	border-radius: 3px;
+	font-size: 14px;
+	padding: 10px;
+	color: white;
+	cursor: pointer;
+	font-weight: bold;
+	
+	background-color: #3C657C;
+	border: 1px solid #aaa;
+}
+.customButton2:hover, .customButton2:focus {
+	border: 1px solid #62658B;
+	background-color: #6B99B4;
+}
+/** CUSTOM BUTTON **/
 
 .userRating {
 	display: block;
@@ -183,7 +199,7 @@ input {
 	border: 1px solid #CCC;
 	border-radius: 5px;
 	padding: 5px;
-	background-color: #F0F0F0;
+	background-color: #F7F7F7;
 }
 
 #searchField {
@@ -482,7 +498,100 @@ input {
 	padding-right: 5px;
 	margin-top: 5px;
 }
+.wrapperUserAccount {
+	border-top: 1px solid #CCC;
+	margin: 30px 0px;
+	padding-top: 30px;
+}
 /** NAVIGATION **/
+
+/** INPUT TEXT **/
+.inputMainForm {
+	padding: 5px;
+	border: 1px solid #D8DEE2;
+	font-size: 110%;
+	height: 23px;
+}
+.bigInputMainForm {
+	width: 600px;
+}
+.mediumInputMainForm {
+	width: 300px;
+}
+.inputDisable {
+	background-color: #F7F7F7;
+}
+/** INPUT TEXT **/
+
+/** TABLE COLUMN **/
+.columnLabel {
+	text-align: right;
+	width: 100px;
+}
+.columnInput {
+	padding-left: 15px;
+}
+.columnTop {
+	vertical-align: top;
+}
+/** TABLE COLUMN **/
+
+/** USER ACCOUNT **/
+#boxAccountProfileLeftSide {
+	border-radius: 3px;
+	padding: 25px 15px;
+	border: 1px solid #CC6600;
+	background-color: #F7F7F7;
+	text-align: center;
+}
+#boxAccountProfileImage {
+	background-color: #FFF;
+	position: relative;
+	border: 1px solid #CC6600;
+	margin-bottom: 30px;
+	min-width: 128px;
+	min-height: 128px;
+}
+.tableInputFormUserAccount {
+	padding: 10px 25px;
+}
+.menuOptionUserAccount {
+	font-weight: bold;
+	cursor: pointer;
+}
+.boxUserAccountForm {
+	margin-left: 30px;
+	position: relative;
+	padding: 30px 25px;
+}
+.boxUserAccountFormInputs {
+	font: 13px Helvetica, arial, freesans, clean, sans-serif;
+	line-height: 1.4;
+	color: #CC6600;
+	border: 1px solid #CC6600;
+	background-color: #F7F7F7;
+}
+.boxUserAccountFormContext {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-left: 1px solid #CC6600;
+	border-right: 1px solid #CC6600;
+	border-top: 1px solid #CC6600;
+	border-radius: 5px 5px 0 0;
+	
+	font-size: 15px;
+	font-weight: bold;
+	color: #CC6600;
+}
+.mainFormAccountUserBoxButtons {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-left: 1px solid #CC6600;
+	border-right: 1px solid #CC6600;
+	border-bottom: 1px solid #CC6600;
+	border-radius: 0 0 5px 5px;
+}
+/** USER ACCOUNT **/
 
 /** FOOTER **/
 #footer {
