--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-richfaces.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-richfaces.css
@@ -48,4 +48,8 @@
 	color: #333333 !important;
     font: 13px/1.4 Helvetica,arial,freesans,clean,sans-serif !important;
 }
+
+.rf-fu-lst {
+/* 	height: 1px !important; */
+}
 /** RICHFACES STYLES **/
