--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-messages.css
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-messages.css
@@ -8,14 +8,15 @@
 }
 .messages {
 	border: 2px solid #2D7096;
-	border-radius: 5px;
+	border-radius: 10px;
 	
 	margin: 0px auto;
 	width: 600px;
 	padding: 10px;
 	background-color: #FFF2C8;
 	
-	font: 13px Helvetica, arial, freesans, clean, sans-serif;
+	font: bold 13px Helvetica, arial, freesans, clean, sans-serif;
+	color: #2D7096;
 }
 .closePopupMessage {
 	text-align: right;
