--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -187,6 +187,12 @@ textarea:FOCUS {
 
 
 /** TOP **/
+.welcomeMsg {
+	font-family: Arial,Helvetica,sans-serif;
+	color: #CC6600;
+	font-weight: bold;
+}
+
 #topLinks {
 	text-align: right;
 }
