--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -417,6 +417,7 @@ textarea:FOCUS {
 	height: 165px;
 	position: relative;
 	margin-left: 30px;
+	background-color: #FFFBAB;
 }
 
 .indexListItens ul {
