--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-admin.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-admin.css
@@ -166,6 +166,9 @@ table {
 .menuItemSales {
 	background-image: url(../images/emblem-sales.png);
 }
+.menuItemUseTerm {
+	background-image: url(../images/useTerm.png);
+}
 /** MENU ITEM **/
 
 /** PANELGROUPIMGSEARCH **/
