--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-shared.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-shared.css
@@ -15,8 +15,8 @@
 }
 
 .columnListActions {
-	width: 50px;
-	text-align: center;
+	width: 90px;
+	text-align: left;
 }
 .columnListActions img {
 	margin-right: 7px;
